// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Accordion block saved block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-accordion ugb-accordion ugb-accordion--design-design ugb-accordion--open className"
  role="presentation"
>
  <div
    aria-expanded="true"
    className="ugb-accordion__heading ugb--shadow-1"
    role="button"
    style={
      Object {
        "backgroundColor": "#123456",
        "borderRadius": 6,
      }
    }
    tabIndex="0"
  >
    <h4
      aria-controls="090240__text"
      aria-level="3"
      id="090240__heading"
      role="heading"
      style={
        Object {
          "color": "#123456",
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "heading",
          }
        }
      />
    </h4>
    <div />
  </div>
  <p
    aria-labelledby="090240__heading"
    className="ugb-accordion__text"
    id="090240__text"
    role="region"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "text",
        }
      }
    />
  </p>
</div>
`;

exports[`Accordion block saved default block HTML shouldn't change 1`] = `
<div
  className="wp-block-ugb-accordion ugb-accordion"
  role="presentation"
>
  <div
    aria-expanded="false"
    className="ugb-accordion__heading"
    role="button"
    style={
      Object {
        "backgroundColor": undefined,
        "borderRadius": undefined,
      }
    }
    tabIndex="0"
  >
    <h4
      aria-controls="5c5886__text"
      aria-level="3"
      id="5c5886__heading"
      role="heading"
      style={
        Object {
          "color": undefined,
        }
      }
    >
      <div
        dangerouslySetInnerHTML={
          Object {
            "__html": "Title for This Block",
          }
        }
      />
    </h4>
    <div />
  </div>
  <p
    aria-labelledby="5c5886__heading"
    className="ugb-accordion__text"
    id="5c5886__text"
    role="region"
  >
    <div
      dangerouslySetInnerHTML={
        Object {
          "__html": "Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block. Description for this block. Use this space for describing your block. Any text will do. Description for this block. You can use this space for describing your block.",
        }
      }
    />
  </p>
</div>
`;
